examples/kju/positive/type_inference/simple_array.kju
fun kju() : Unit
{
	var a : [?];
    a = new(Int, 1);
}
