examples/kju/negative/arrays/index_by_bool.kju
fun kju(): Unit
{
	var ay: [Int] = new(Int,5);
	ay[true];
}
